[gd_scene load_steps=11 format=3 uid="uid://c8x7w6v5u4t3"]

[ext_resource type="Script" uid="uid://bc6qp5c8gi2qd" path="res://scripts/main_menu.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://b8q7x6y504w3" path="res://resources/main_theme.tres" id="2_theme"]
[ext_resource type="Texture2D" uid="uid://d07w170yquki6" path="res://assets/textures/logo.svg" id="3_logo"]

[sub_resource type="Gradient" id="Gradient_bg"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.05, 0.1, 0.08, 1, 0.08, 0.15, 0.12, 1, 0.04, 0.08, 0.06, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bg"]
gradient = SubResource("Gradient_bg")
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[sub_resource type="Gradient" id="Gradient_accent"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.7, 1)
colors = PackedColorArray(0.3, 0.8, 0.5, 0.15, 0.2, 0.6, 0.4, 0.05, 0, 0.2, 0.1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_accent"]
gradient = SubResource("Gradient_accent")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_normal"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 15.0
bg_color = Color(0.13, 0.55, 0.13, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0.3, 0, 1)
shadow_offset = Vector2(0, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_pressed"]
content_margin_left = 20.0
content_margin_top = 14.0
content_margin_right = 20.0
content_margin_bottom = 11.0
bg_color = Color(0.13, 0.55, 0.13, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0.3, 0, 1)
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 15.0
bg_color = Color(0.18, 0.7, 0.18, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0.3, 0, 1)
shadow_offset = Vector2(0, 6)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="BackgroundBase" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_bg")

[node name="ParallaxLayers" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Accent1" type="TextureRect" parent="ParallaxLayers"]
self_modulate = Color(1, 1, 1, 0.5)
layout_mode = 0
offset_left = -228.0
offset_top = 114.0
offset_right = 372.0
offset_bottom = 714.0
texture = SubResource("GradientTexture2D_accent")

[node name="Accent2" type="TextureRect" parent="ParallaxLayers"]
self_modulate = Color(1, 1, 1, 0.3)
layout_mode = 0
offset_left = 370.0
offset_top = 649.0
offset_right = 870.0
offset_bottom = 1149.0
texture = SubResource("GradientTexture2D_accent")

[node name="FloatingPieces" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ContentLayer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GlassPanel" type="VBoxContainer" parent="ContentLayer"]
custom_minimum_size = Vector2(500, 700)
layout_mode = 2
theme_override_constants/separation = 24

[node name="LogoContainer" type="Control" parent="ContentLayer/GlassPanel"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2

[node name="LogoTexture" type="TextureRect" parent="ContentLayer/GlassPanel/LogoContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_logo")
expand_mode = 1
stretch_mode = 5

[node name="Title" type="Label" parent="ContentLayer/GlassPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "CHECKERS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="ContentLayer/GlassPanel"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="PlayAI" type="Button" parent="ContentLayer/GlassPanel"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PLAY vs AI"

[node name="PlayFriend" type="Button" parent="ContentLayer/GlassPanel"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PLAY vs FRIEND"

[node name="DailyChallenge" type="Button" parent="ContentLayer/GlassPanel"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "DAILY CHALLENGE"

[node name="Levels" type="Button" parent="ContentLayer/GlassPanel"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "LEVEL JOURNEY"
